force-app/main/default/objects/clariti__PayableObjectSearchSettings__mdt/clariti__PayableObjectSearchSettings__mdt.object-meta.xml
<CustomObject>
    <label>Payable Object Search Settings</label>
    <pluralLabel>Payable Object Search Settings</pluralLabel>
</CustomObject>