force-app/main/default/objects/clariti__PayableObjectSearchSettings__mdt/fields/clariti__AssociatedParentObjects__c.field-meta.xml
<CustomField>
    <fullName>clariti__AssociatedParentObjects__c</fullName>
    <description>Comma separated list of associated parent object API names defined in Parent Object Search Settings</description>
    <inlineHelpText>Comma separated list of associated parent object API names defined in Parent Object Search Settings</inlineHelpText>
    <label>Associated Parent Objects</label>
    <type>TextArea</type>
</CustomField>