force-app/main/default/objects/clariti__PayableObjectSearchSettings__mdt/fields/clariti__EnableForInvoice__c.field-meta.xml
<CustomField>
    <fullName>clariti__EnableForInvoice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Displays payable object as a tab in the invoice add items payable item table</description>
    <label>Enable for Invoice</label>
    <type>Checkbox</type>
</CustomField>