force-app/main/default/objects/clariti__PayableObjectSearchSettings__mdt/fields/clariti__EnableForPaymentBatch__c.field-meta.xml
<CustomField>
    <fullName>clariti__EnableForPaymentBatch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Displays payable object as a tab in the payment batch payable item table</description>
    <label>Enable for Payment Batch</label>
    <type>Checkbox</type>
</CustomField>