force-app/main/default/objects/clariti__PayableObjectSearchSettings__mdt/fields/clariti__ObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>clariti__ObjectAPIName__c</fullName>
    <description>The API name of the payable object</description>
    <inlineHelpText>The API name of the payable object</inlineHelpText>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>